--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ mkdocs-material==9.6.14
 mkdocs-git-revision-date-localized-plugin==1.4.7
 mkdocs-obsidian-links==1.0.4
 mkdocs-callouts==1.16.0
+mkdocs-ezlinks-plugin
